chore: Fixed installation issues.
- Added gitignore to ignore .class files
- updated mysql version to 5.7 and ignored ssl
- updated depreciated lambda role
- updated lambda runtime
- updated docker files
- readme updates

--- a/installer/resources/pacbot_app/files/api_docker/dockerfile
+++ b/installer/resources/pacbot_app/files/api_docker/dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:8
+COPY --from=python:3.7 / /
 ENV RUN_ARGS="--server.port=80 --server.ssl.enabled=false"
 RUN cd /tmp/ && curl -O https://bootstrap.pypa.io/get-pip.py && python get-pip.py && pip install awscli && cd -
 COPY entrypoint.sh ./entrypoint.sh
