--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -16,4 +16,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+      run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
