--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -8,12 +8,9 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
+    - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with: 
+          java-version: 8
     - name: Build with Maven
       run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
