--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -8,9 +8,10 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with: 
-          java-version: 8
+      uses: actions/setup-java@v1
+      with:
+          java-version: 13.0.7
     - name: Build with Maven
       run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
