--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -9,9 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-          java-version: 8
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: running update
+      run: sudo apt update
+    - name: install maven
+      run: sudo apt install maven -y
     - name: Build with Maven
       run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
