localstack-demo collector changes

--- a/jobs/pacman-cloud-discovery/src/resources/application.properties
+++ b/jobs/pacman-cloud-discovery/src/resources/application.properties
@@ -1,8 +1,10 @@
 #server.port=8081
+localstack.enabled=true
 localstack.url=http://54.236.23.168:4566/
 localstack.accessKey=temp
 localstack.secretKey=temp
 localstack.region=us-east-1
+localstack.accounts=123456:DemoAccount1,9876554:DemoAccount2
 
 localstack.generator.folder=/home/dheerK/dev/localstck-poc/localstack-collected-files/
 
@@ -13,5 +15,5 @@ localstack.ec2Prefix=localstack-ec2-
 localstack.vpc=10
 localstack.vpcPrefix=localstack-vpc-
 
-localstack.securityGroups=10
+localstack.securityGroups=3
 localstack.securityGroupsPrefix=localstack-security-group-
