--- a/api/pacman-api-compliance/src/main/resources/bootstrap.yml
+++ b/api/pacman-api-compliance/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
       enabled: true
       fail-fast: true
       name: api,compliance-service
-      password: ${CONFIG_PASSWORD}
+      password: pacman
       username: user
       label: latest
        
@@ -20,8 +20,11 @@ spring:
 security: 
   oauth2:
     resource:
-      user-info-uri: ${PACMAN_HOST_NAME}/api/auth/user
+      user-info-uri: ${PACMAN_HOST_NAME:http://localhost}/api/auth/user
 query:
     assetGroupQuery: SELECT groupName, targetType, attributeName, attributeValue, dataSource, aliasQuery FROM cf_AssetGroups
+
+server:
+  port: 8083
     
 spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
