--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -15,18 +15,18 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    # - name: running update
-    #   run: sudo apt update
+    - name: running update
+      run: sudo apt update
 
-    # - name: install maven
-    #   run: sudo apt install maven -y
+    - name: install maven
+      run: sudo apt install maven -y
 
     - name: Cache the Maven packages to speed up build
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
-        path: ~/.m2
+        path: ~/.m2/repository
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+        restore-keys: ${{ runner.os }}-maven-
 
     - name: Build with Maven
       run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
