--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -14,6 +14,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        cache: 'maven'
 
     - name: running update
       run: sudo apt update
@@ -21,12 +22,12 @@ jobs:
     - name: install maven
       run: sudo apt install maven -y
 
+    - name: Build with Maven
+      run: sudo mvn install package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
     - name: Cache the Maven packages to speed up build
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-m2-${{ hashFiles('/pom.xml') }}
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-maven-
-
-    - name: Build with Maven
-      run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
