--- a/.github/workflows/dev_build.yaml
+++ b/.github/workflows/dev_build.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Maven
       run: sudo mvn install package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
-    - name: Cache the Maven packages to speed up build
+    - name: Cache the Maven packages to speed up builds
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository
