--- a/api/pacman-api-auth/pom.xml
+++ b/api/pacman-api-auth/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.tmobile.pacman</groupId>
+	<groupId>com.paladincloud</groupId>
 	<artifactId>auth-service</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -32,7 +32,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.tmobile.cloud</groupId>
+			<groupId>com.paladincloud</groupId>
 			<artifactId>api-commons</artifactId>
 			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
