--- a/pom.xml
+++ b/pom.xml
@@ -3,42 +3,46 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tmobile</groupId>
-    <artifactId>pacbot</artifactId>
+    <groupId>com.paladincloud</groupId>
+    <artifactId>paladincloud</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>PacMan</name>
-    <description>Build for T-Mobile PacMan Support</description>
-    <url>https://github.com/tmobile/pacman</url>
+    <name>PaladinCloud</name>
+    <description>Build for paladincloud Support</description>
+    <url>https://github.com/PaladinCloud/CE</url>
 
     <licenses>
         <license>
             <name>Apache</name>
-            <url>https://github.com/tmobile/pacman/blob/master/LICENSE</url>
+            <url>https://github.com/paladincloud/CE/blob/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <id>PacMan Team</id>
-            <name>PacMan Team</name>
-            <email>pacbot@t-mobile.com</email>
+            <id>PaladinCloud Team</id>
+            <name>PaladinCloud Team</name>
+            <email>CommunitySupport@PaladinCloud.io</email>
         </developer>
     </developers>
 
     <organization>
-        <name>T-Mobile</name>
-        <url>https://www.t-mobile.com</url>
+        <name>PaladinCloud</name>
+        <url>https://www.paladincloud.io</url>
     </organization>
 
     <scm>
-        <connection>scm:git:git://github.com/tmobile/pacman.git</connection>
-        <developerConnection>scm:git:ssh://github.com/tmobile/pacman.git</developerConnection>
-        <url>https://github.com/tmobile/pacman/tree/master</url>
+        <connection>scm:git:git://github.com/PaladinCloud/CE.git</connection>
+        <developerConnection>scm:git:ssh://github.com/PaladinCloud/CE.git</developerConnection>
+        <url>https://github.com/PaladinCloud/CE/tree/master</url>
     </scm>
-
+    
+    <properties>
+        <sonar.organization>paladincloud</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 
 
     <modules>
@@ -47,5 +51,7 @@
 		<module>jobs</module>
 		<module>webapp</module>
     </modules>
+    
+
 
 </project>
