--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,19 +4,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.tmobile.cloud</groupId>
+	<groupId>com.paladincloud</groupId>
 	<artifactId>webapp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>PacBot UI</name>
-	<description>Build for T-Mobile PacBot UI SPA - Angular</description>
-	<url>https://github.com/tmobile/pacman/webapp</url>
+	<name>PaladinCloud UI</name>
+	<description>Build for paladincloud UI SPA - Angular</description>
+	<url>https://github.com/paladincloud/CE/webapp</url>
 
 	<licenses>
 		<license>
 			<name>Apache</name>
-			<url>https://github.com/tmobile/pacman/blob/master/LICENSE</url>
+			<url>https://github.com/paladincloud.io/CE/blob/master/LICENSE</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -24,23 +24,22 @@
 	<developers>
 		<developer>
 
-			<id>PacBot Team</id>
-			<name>PacBot Team</name>
-			<email>pacbot@T-Mobile.com</email>
+			<id>PaladinCloud Team</id>
+			<name>PaladinCloud Team</name>
+			<email>CommunitySupport@PaladinCloud.io</email>
 		</developer>
 	</developers>
 
 	<organization>
-		<name>T-Mobile</name>
-		<url>https://www.t-mobile.com</url>
+		<name>PaladinCloud</name>
+		<url>https://www.paladincloud.io</url>
 	</organization>
 
-	<scm>
-		<connection>scm:git:git://github.com/tmobile/pacman.git</connection>
-		<developerConnection>scm:git:ssh://github.com/tmobile/pacman.git</developerConnection>
-		<url>https://github.com/tmobile/pacman/tree/master</url>
-	</scm>
-
+    <scm>
+        <connection>scm:git:git://github.com/paladincloud/CE.git</connection>
+        <developerConnection>scm:git:ssh://github.com/paladincloud/CE.git</developerConnection>
+        <url>https://github.com/paladincloud/CE/tree/master</url>
+    </scm>
 
 	  <build>
         <plugins>
