workflow_for_ststic_code_testing_

--- a/.github/workflows/SonarCodeAnalysis.yaml
+++ b/.github/workflows/SonarCodeAnalysis.yaml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: running update
+        run: sudo apt update
+      - name: install maven
+        run: sudo apt install maven -y
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
