--- a/.github/workflows/SonarCodeAnalysis.yaml
+++ b/.github/workflows/SonarCodeAnalysis.yaml
@@ -14,10 +14,10 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: s4u/setup-maven-action@< version >
         with:
           java-version: 11  
-          maven-version: 3.63
+          maven-version: 3.6.3
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
