--- a/.github/workflows/SonarCodeAnalysis.yaml
+++ b/.github/workflows/SonarCodeAnalysis.yaml
@@ -14,10 +14,11 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
-        uses: s4u/setup-maven-action@3.6.3
+        uses: actions/setup-java@v1
         with:
           java-version: 11  
-          maven-version: 3.6.3
+      - name: install maven
+        uses: sudo apt install maven -y
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
