--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,21 @@
         <developerConnection>scm:git:ssh://github.com/tmobile/pacman.git</developerConnection>
         <url>https://github.com/tmobile/pacman/tree/master</url>
     </scm>
-
-    <properties>
-        <sonar.organization>paladincloud</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    </properties>
+<build>
+    <plugin>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.9.1.2184</version>
+			<executions>
+				<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>sonar</goal>
+						</goals>
+				</execution>
+			</executions>
+	</plugin>
+</build>
 
 
     <modules>
