--- a/.github/workflows/SonarCodeAnalysis.yaml
+++ b/.github/workflows/SonarCodeAnalysis.yaml
@@ -37,4 +37,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: sudo mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=paladincloud -Dsonar.projectKey=PaladinCloud_CE
+        run: sudo mvn -B -DskipTests=true -Dmaven.javadoc.skip=true -V verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=paladincloud -Dsonar.projectKey=PaladinCloud_CE
