sonar_cloud_test

--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,31 @@
         <url>https://github.com/tmobile/pacman/tree/master</url>
     </scm>
 
-    <properties>
+    <!-- <properties>
         <sonar.organization>paladincloud</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    </properties>
-
+    </properties> -->
+ <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.7.0.1746</version>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.6</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
     <modules>
 		<module>commons</module>
