--- a/pom.xml
+++ b/pom.xml
@@ -4,39 +4,39 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tmobile</groupId>
-    <artifactId>pacbot</artifactId>
+    <artifactId>paladincloud</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>PacMan</name>
-    <description>Build for T-Mobile PacMan Support</description>
-    <url>https://github.com/tmobile/pacman</url>
+    <name>PaladinCloud</name>
+    <description>Build for paladincloud Support</description>
+    <url>https://github.com/PaladinCloud/CE</url>
 
     <licenses>
         <license>
             <name>Apache</name>
-            <url>https://github.com/tmobile/pacman/blob/master/LICENSE</url>
+            <url>https://github.com/PaladinCloud/CE/blob/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <id>PacMan Team</id>
-            <name>PacMan Team</name>
-            <email>pacbot@t-mobile.com</email>
+            <id>PaladinCloud Team</id>
+            <name>PaladinCloud Team</name>
+            <email><paladincloud class="io"></paladincloud></email>
         </developer>
     </developers>
 
     <organization>
-        <name>T-Mobile</name>
-        <url>https://www.t-mobile.com</url>
+        <name>paladincloud</name>
+        <url>https://www.paladincloud.io</url>
     </organization>
 
     <scm>
-        <connection>scm:git:git://github.com/tmobile/pacman.git</connection>
-        <developerConnection>scm:git:ssh://github.com/tmobile/pacman.git</developerConnection>
-        <url>https://github.com/tmobile/pacman/tree/master</url>
+        <connection>scm:git:git://github.com/paladincloud/CE.git</connection>
+        <developerConnection>scm:git:ssh://github.com/paladincloud/CE.git</developerConnection>
+        <url>https://github.com/paladincloud/CE/tree/master</url>
     </scm>
 
     <properties>
