--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tmobile</groupId>
+    <groupId>PaladinCloud.io</groupId>
     <artifactId>paladincloud</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>PaladinCloud</name>
+    <name>paladincloud</name>	
     <description>Build for paladincloud Support</description>
     <url>https://github.com/PaladinCloud/CE</url>
 
     <licenses>
         <license>
             <name>Apache</name>
-            <url>https://github.com/PaladinCloud/CE/blob/master/LICENSE</url>
+            <url>https://github.com/tmobile/pacman/blob/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -24,7 +24,7 @@
         <developer>
             <id>PaladinCloud Team</id>
             <name>PaladinCloud Team</name>
-            <email><paladincloud class="io"></paladincloud></email>
+            <email>CommunitySupport@PaladinCloud.io</email>
         </developer>
     </developers>
 
@@ -46,7 +46,7 @@
 
     <modules>
 		<module>commons</module>
-                <module>api</module>
+        <module>api</module>
 		<module>jobs</module>
 		<module>webapp</module>
     </modules>
