--- a/.github/workflows/SonarCodeAnalysis.yaml
+++ b/.github/workflows/SonarCodeAnalysis.yaml
@@ -1,5 +1,7 @@
-name: Build
+name: SonarCloudAnalysis
 on:
+  push:
+    branches: [master, dev]
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -14,10 +16,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: running update
-        run: sudo apt update
-      - name: Install maven
-        run: sudo apt install maven -y
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -34,4 +32,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
-        run: sudo mvn -B -DskipTests=true -Dmaven.javadoc.skip=true -V verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=PaladinCloud_CE  -Dsonar.organization=paladincloud -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN 
+        run: sudo mvn -B -DskipTests=true -Dmaven.javadoc.skip=true -V verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Pcoverage -Dsonar.projectKey=PaladinCloud_CE  -Dsonar.organization=paladincloud -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN 
