--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,24 +16,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.16",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.16",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/platform-server": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@types/geojson": "7946.0.8",
     "@types/lodash": "4.14.112",
     "ag-grid": "^16.0.1",
     "ag-grid-angular": "^16.0.0",
     "angular-font-awesome": "^3.1.2",
-    "angular-in-memory-web-api": "^0.6.1",
+    "angular-in-memory-web-api": "^0.7.0",
     "angular-tree-component": "^7.2.1",
     "blocking-proxy": "^1.0.1",
     "core-js": "^2.4.1",
@@ -50,13 +50,14 @@
     "offline-js": "^0.7.19",
     "rxjs": "~6.6.7",
     "rxjs-tslint": "^0.1.8",
-    "zone.js": "~0.8.26"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~7.3.10",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/cli": "~8.3.29",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/d3": "^4.10.1",
     "@types/d3-array": "1.0.5",
     "@types/d3-axis": "1.0.5",
@@ -67,7 +68,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "adal-angular": "^1.0.17",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "^5.2.2",
     "crypto-js": "^3.1.9-1",
     "http-status-codes": "^1.3.0",
     "jasmine-console-reporter": "^3.0.2",
@@ -85,6 +86,6 @@
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.4"
+    "typescript": "~3.5.3"
   }
 }
