--- a/webapp/package.json
+++ b/webapp/package.json
@@ -86,6 +86,6 @@
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.8.3"
+    "typescript": "3.8"
   }
 }
