--- a/webapp/package.json
+++ b/webapp/package.json
@@ -50,7 +50,7 @@
     "offline-js": "^0.7.19",
     "rxjs": "~6.6.7",
     "rxjs-tslint": "^0.1.8",
-    "tslib": "^2.0.0",
+    "tslib": "1.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
