--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,13 +17,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.2.5",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "^10.2.5",
     "@angular/compiler": "^10.2.5",
     "@angular/core": "^10.2.5",
     "@angular/forms": "^10.2.5",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "^10.2.5",
     "@angular/platform-browser-dynamic": "^10.2.5",
     "@angular/platform-server": "^10.2.5",
@@ -32,7 +32,6 @@
     "@types/lodash": "4.14.112",
     "ag-grid": "^16.0.1",
     "ag-grid-angular": "^16.0.0",
-    "angular-font-awesome": "^3.1.2",
     "angular-in-memory-web-api": "^0.9.0",
     "angular-tree-component": "^7.2.1",
     "blocking-proxy": "^1.0.1",
@@ -50,7 +49,7 @@
     "offline-js": "^0.7.19",
     "rxjs": "~6.6.7",
     "rxjs-tslint": "^0.1.8",
-    "tslib": "1.9",
+    "tslib": "^2.4.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
