angular-tree to @circlon/angular-tree

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,12 +27,12 @@
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/platform-server": "^12.2.16",
     "@angular/router": "^12.2.16",
+    "@circlon/angular-tree-component": "^11.0.4",
     "@types/geojson": "7946.0.8",
     "@types/lodash": "4.14.112",
     "ag-grid": "^16.0.1",
     "ag-grid-angular": "^16.0.0",
     "angular-in-memory-web-api": "^0.9.0",
-    "angular-tree-component": "^7.2.1",
     "blocking-proxy": "^1.0.1",
     "core-js": "^2.4.1",
     "d3": "^4.13.0",
