--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-server": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@circlon/angular-tree-component": "^11.0.4",
+    "@ng-select/ng-select": "^9.0.2",
     "@types/geojson": "7946.0.8",
     "@types/lodash": "4.14.112",
     "ag-grid": "^16.0.1",
@@ -40,13 +41,14 @@
     "html2canvas": "^1.2",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
-    "ng2-datepicker": "^2.1.7",
+    "ng2-datepicker": "^2.3.1",
     "ng2-select": "^2.0.0",
     "ngx-highlight": "^0.0.3",
     "ngx-infinite-scroll": "^0.8.3",
     "ngx-select-dropdown": "^1.5.0",
     "offline-js": "^0.7.19",
     "rxjs": "~6.6.7",
+    "rxjs-compat": "^6.6.7",
     "rxjs-tslint": "^0.1.8",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.6"
