chore:/updated_sonarcloud_for_request 	made project in sonarcloud public

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,7 @@ sonar.projectVersion=1.0
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+sonar.pullrequest.base=master
+sonar.pullrequest.key=5
+sonar.pullrequest.provider=GitHub
+sonar.pullrequest.github.repository=PaladinCloud/CE
