fix: Rule enable-disable issue - Modified code to fetch the event bus details from config api - Added admin-api configuration to read configuration of job-sceduler

--- a/api/pacman-api-admin/src/main/resources/bootstrap.yml
+++ b/api/pacman-api-admin/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
       uri: ${CONFIG_SERVER_URL:http://localhost:8888/api/config/}
       enabled: true
       fail-fast: true
-      name: api,admin-service
+      name: api,admin-service,job-scheduler
       password: ${CONFIG_PASSWORD}
       username: user
       label: latest
