--- a/webapp/package.json
+++ b/webapp/package.json
@@ -34,6 +34,7 @@
         "ag-grid": "^16.0.1",
         "ag-grid-angular": "^16.0.0",
         "angular-in-memory-web-api": "^0.9.0",
+        "apexcharts": "^3.35.4",
         "blocking-proxy": "^1.0.1",
         "core-js": "^2.4.1",
         "d3": "^4.13.0",
@@ -41,6 +42,7 @@
         "html2canvas": "^1.2",
         "lodash": "^4.17.21",
         "moment": "^2.24.0",
+        "ng-apexcharts": "^1.7.1",
         "ngx-highlight": "^0.0.3",
         "ngx-infinite-scroll": "^0.8.3",
         "ngx-select-dropdown": "^2.1.0",
