replaced deprecated tslint with eslint airbnb typescript eslint rules editorconfig used prettier as formatter introduced stylelint for css linting added recommended extensions to vscode workspace

--- a/webapp/angular.json
+++ b/webapp/angular.json
@@ -113,6 +113,15 @@
               "src/favicon.ico"
             ]
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
