--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
+        "lint:styles": "stylelint \"**/*.css\"",
         "e2e": "ng e2e",
         "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
         "build-prod-patch": "npm version patch --force && node ./replace.build.js && ng build --prod --aot=false",
@@ -55,6 +56,10 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~13.3.8",
+        "@angular-eslint/builder": "13.5.0",
+        "@angular-eslint/eslint-plugin": "13.5.0",
+        "@angular-eslint/eslint-plugin-template": "13.5.0",
+        "@angular-eslint/template-parser": "13.5.0",
         "@angular/cli": "~13.3.8",
         "@angular/compiler-cli": "^13.3.11",
         "@angular/language-service": "^13.3.11",
@@ -67,9 +72,15 @@
         "@types/jasmine": "4.0.3",
         "@types/jasminewd2": "2.0.10",
         "@types/node": "^12.11.1",
+        "@typescript-eslint/eslint-plugin": "5.27.1",
+        "@typescript-eslint/parser": "5.27.1",
         "adal-angular": "^1.0.17",
-        "codelyzer": "^6.0.2",
         "crypto-js": "^3.1.9-1",
+        "eslint": "^8.17.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-prettier": "^4.2.1",
         "http-status-codes": "^1.3.0",
         "jasmine-console-reporter": "^3.1.0",
         "jasmine-core": "~4.1.1",
@@ -79,12 +90,15 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.0.1",
         "karma-jasmine-html-reporter": "~2.0.0",
+        "prettier": "^2.8.3",
         "protractor": "7.0.0",
         "protractor-jasmine2-html-reporter": "0.0.7",
         "replace-in-file": "^3.4.2",
         "source-map-explorer": "^1.6.0",
+        "stylelint": "^14.16.1",
+        "stylelint-config-prettier": "^9.0.4",
+        "stylelint-config-standard": "^29.0.0",
         "ts-node": "~7.0.0",
-        "tslint": "~6.1.0",
         "typescript": "4.6.4"
     }
 }
