--- a/jobs/azure-discovery/pom.xml
+++ b/jobs/azure-discovery/pom.xml
@@ -34,6 +34,23 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.12.6.1</version>
 			</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.12.290</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-secretsmanager</artifactId>
+			<version>1.12.413</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<version>1.12.239</version>
+		</dependency>
             
 	</dependencies>
 
