--- a/.github/workflows/codeQl.yaml
+++ b/.github/workflows/codeQl.yaml
@@ -68,7 +68,7 @@ jobs:
       name: Build Java
       run: |
         sudo apt install maven -y
-        export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
+        export MAVEN_OPTS="-Xmx3000m"
         mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
