--- a/commons/pac-batch-commons/pom.xml
+++ b/commons/pac-batch-commons/pom.xml
@@ -389,6 +389,14 @@
 						</execution>
 					</executions>
 				</plugin>
+				<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19</version>
+        <configuration>
+            <argLine>-Xmx7000m</argLine>
+        </configuration>
+      </plugin>
 			</plugins>
 		</pluginManagement>
 
